--- a/A_Propos/Propos.html
+++ b/A_Propos/Propos.html
@@ -15,6 +15,18 @@
 </head>
 
 <body>
+    <div class="Menu">
+        <ul class="">
+            <li><a href="../Menu/Menu.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
+            <li><a aria-current="page" href="#">Formations</a></li>
+            <li><a href="../Atelier/code.html">Ateliers</a></li>
+            <li><a href="">Poadcast</a></li>
+            <li><a href="../livres/livres.html">Livres</a></li>
+            <li><a href="../connexion/connexion.html" tabindex="-1" aria-disabled="true">Se connecter</a></li>
+            <li><a href="../panier/panier.html"><i class="fa-solid fa-cart-plus" style="color: #00a347;"></i></a></li>
+        </ul>
+    </div>
+    <br><br>
     <!------ Debut section container A propos--------->
     <div class="container">
         <!-- NavBar -->
@@ -24,7 +36,7 @@
                 <p>J'aime bien enseigner et paraît-il que je le fais super bien :)</p>
             </div>
         </div>
-        <hr class="w-100">
+        <!-- <hr class="w-100"> -->
         <!-- Debut Section A propos -->
         <div class="row justify-content-center">
             <div class="col-md-8">
@@ -51,5 +63,51 @@
         <!-- Fin section Propos -->
     </div>
     <!------ Fin section container A propos --------->
+    <br><br>
+    <!------ Fin section container Support --------->
+    <footer>
+        <div class="section_footer">
+            <div class="footer1">
+                <h4>Parlons Code</h4>
+                <p>Apprenez a programmer par la pratique!</p>
+                <div class="reseaux">
+                    <ul>
+                        <li><i class="fa-brands fa-twitter"></i></li>
+                        <li><i class="fa-brands fa-facebook"></i></li>
+                        <li><i class="fa-brands fa-instagram"></i></li>
+                        <li><i class="fa-brands fa-linkedin"></i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer1">
+                <h4>Liens Utile</h4>
+                <p><a href="">Formations</a></p>
+                <p><a href="">Poadcasts</a></p>
+                <p><a href="../livres/livres.html">Livres & Books</a></p>
+                <p><a href="">Support Techniques</a></p>
+            </div>
+            <div class="footer1">
+                <h4>Autres</h4>
+                <p><a href="../A_Propos/Propos.html">A propos</a></p>
+                <p><a href="">Contact</a></p>
+                <p><a href="../Politiquesdeconfidentialites/confi.html">Politique de confidentialité</a></p>
+                <p><a href="../Conditiond'Utilisations/condit.html">Condition d'utilisation</a></p>
+            </div>
+        </div>
+        <hr width="80%" style="">
+        <div class="icone">
+            <img src="icons8-rappels-de-rendez-vous-50.png" >
+            <p>Recevez toutes les actualités du site sur votre boite mail!</p>
+        </div>
+    
+        <div class="newsletters">
+            <input type="text" placeholder="Veuillez entrer votre adresse e-mail">
+            <button>S'abonner a la newsletters</button>
+        </div>
+        <p style="text-align: center; padding-top: 20px;">Conçu avec <span><i class="fa-solid fa-heart"
+                    style="color: pink;"></i></span>et <span><i class="fa-solid fa-mug-saucer"
+                    style="color: #74777b;"></i></span>beaucoup de sur Jupiter · © Copyright 2017 ‐ 2023. Tous Droits
+            Réservés.</p>
+    </footer>
 </body>
 </html>
