--- a/Detail/Detail.html
+++ b/Detail/Detail.html
@@ -13,6 +13,18 @@
 </head>
 
 <body>
+    <div class="Menu">
+        <ul class="">
+            <li><a href="../Menu/Menu.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
+            <li><a aria-current="page" href="#">Formations</a></li>
+            <li><a href="../Atelier/code.html">Ateliers</a></li>
+            <li><a href="">Poadcast</a></li>
+            <li><a href="../livres/livres.html">Livres</a></li>
+            <li><a href="../connexion/" tabindex="-1" aria-disabled="true">Se connecter</a></li>
+            <li><a href=""></a></li>
+        </ul>
+    </div>
+    <br><br>
         <section class="h-100 gradient-custom">
             <div class="container">
                 <!-- NavBar -->
@@ -255,6 +267,53 @@
                 <!-------------------------- Fin section a gauche ------------>
             </div>
         </section>
+
+        <br><br>
+        <!------ Fin section container Support --------->
+        <footer>
+            <div class="section_footer">
+                <div class="footer1">
+                    <h4>Parlons Code</h4>
+                    <p>Apprenez a programmer par la pratique!</p>
+                    <div class="reseaux">
+                        <ul>
+                            <li><i class="fa-brands fa-twitter"></i></li>
+                            <li><i class="fa-brands fa-facebook"></i></li>
+                            <li><i class="fa-brands fa-instagram"></i></li>
+                            <li><i class="fa-brands fa-linkedin"></i></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer1">
+                    <h4>Liens Utile</h4>
+                    <p><a href="">Formations</a></p>
+                    <p><a href="">Poadcasts</a></p>
+                    <p><a href="../livres/livres.html">Livres & Books</a></p>
+                    <p><a href="">Support Techniques</a></p>
+                </div>
+                <div class="footer1">
+                    <h4>Autres</h4>
+                    <p><a href="../A_Propos/Propos.html">A propos</a></p>
+                    <p><a href="">Contact</a></p>
+                    <p><a href="../Politiquesdeconfidentialites/confi.html">Politique de confidentialité</a></p>
+                    <p><a href="../Conditiond'Utilisations/condit.html">Condition d'utilisation</a></p>
+                </div>
+            </div>
+            <hr width="80%" style="">
+            <div class="icone">
+                <img src="icons8-rappels-de-rendez-vous-50.png" width="20px">
+                <p>Recevez toutes les actualités du site sur votre boite mail!</p>
+            </div>
+        
+            <div class="newsletters">
+                <input type="text" placeholder="Veuillez entrer votre adresse e-mail">
+                <button>S'abonner a la newsletters</button>
+            </div>
+            <p style="text-align: center; padding-top: 20px;">Conçu avec <span><i class="fa-solid fa-heart"
+                        style="color: pink;"></i></span>et <span><i class="fa-solid fa-mug-saucer"
+                        style="color: #74777b;"></i></span>beaucoup de sur Jupiter · © Copyright 2017 ‐ 2023. Tous Droits
+                Réservés.</p>
+        </footer>
 
 </body>
 
