--- a/page_accueil/index.html
+++ b/page_accueil/index.html
@@ -33,7 +33,7 @@
                 <div class="" id="navbarCollapse">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Formations</a>
+                            <a class="nav-link active" aria-current="page" href="#formation">Formations</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " aria-disabled="true" href="../Atelier/code.html">Ateliers</a>
@@ -57,12 +57,12 @@
             <div class="banner">
                 <div>
                     <p><span>Parlons Code</span><br>Apprenez à coder en Python, Django, Symfony, Java Swing, etc par la pratique.</p>
-                    <button>Choisir une formation <i class="fa-solid fa-caret-down"></i></button>
+                    <a href="#formation"><button>Choisir une formation <i class="fa-solid fa-caret-down"></i></button></a>
                 </div>
             </div>
         </section>
         <section>
-            <div class="container" style="margin-top: 40px;">
+            <div class="container" style="margin-top: 40px;" id="formation">
                 <div class="row row-all">
                     <div class="col-4 col-lg-4 col-md-12 col-sm-12">
                         <div class="container-box">
@@ -70,7 +70,7 @@
                                 <i class="fa-brands fa-symfony" style="color: #000000;"></i>
                             </div>
                             <div class="titre-box">
-                                <a href="Devenez un pro Symfony 6">Devenez un pro Symfony 6</a>
+                                <a href="../Formations/formation-1.html">Devenez un pro Symfony 6</a>
                             </div>
                             <div class="texte-box">
                                 <p><i class="fa-solid fa-list"></i> 129 Vidéos <span class="dispo-prema">Disponible en accès
@@ -83,7 +83,9 @@
                                     Amazon, Indeed, etc.</p>
                             </div>
                             <div class="valide">
-                                <button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button>
+                                <a class="d-flex justify-content-center align-items-center" href="../Formations/formation-1.html"
+                                    style="width: 400px; text-decoration: none;"><button><i class="fa-solid fa-play" style="color: #ffffff;"></i>
+                                        Demarrer la formation</button></a>
                             </div>
                         </div>
                     </div>
@@ -94,7 +96,7 @@
                                 <i class="fa-brands fa-python" style="color: #eed211;"></i>
                             </div>
                             <div class="titre-box">
-                                <a href="Devenez un pro Symfony 6">MasterClass Python</a>
+                                <a href="../Formations/formation2.html">MasterClass Python</a>
                             </div>
                             <div class="texte-box">
                                 <p><i class="fa-solid fa-list"></i> 129 Vidéos <span class="dispo-prema">Disponible en accès
@@ -107,19 +109,20 @@
                                 </p>
                             </div>
                             <div class="valide">
-                                <button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button>
+                            <a class="d-flex justify-content-center align-items-center" href="../Formations/formation-1.html"
+                                style="width: 400px; text-decoration: none;"><button><i class="fa-solid fa-play" style="color: #ffffff;"></i>
+                                    Demarrer la formation</button></a>
                             </div>
                         </div>
                     </div>
-            
-            
+
                     <div class="col-4 col-lg-4 col-md-12 col-sm-12">
                         <div class="container-box">
                             <div class="icon-box">
                                 <i class="fa-brands fa-symfony" style="color: #000000;"></i>
                             </div>
                             <div class="titre-box">
-                                <a href="Devenez un pro Symfony 6">Symfony 5 en une semaine!</a>
+                                <a href="../Formations/formation3.html">Symfony 5 en une semaine!</a>
                             </div>
                             <div class="texte-box">
                                 <p> <span style="line-height: 14px;"><i class="fa-solid fa-list"></i> 129 Vidéos </span><br><br>
@@ -129,7 +132,7 @@
                                     développement. Donnez-moi une semaine et je vous le prouverai :). Ready?</p>
                             </div>
                             <div class="valide">
-                                <button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button>
+                                <a class="d-flex justify-content-center align-items-center" href="../Formations/formation-1.html" style="width: 400px; text-decoration: none;"><button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button></a>
                             </div>
                         </div>
                     </div>
@@ -142,7 +145,7 @@
                                 <i class="fa-brands fa-symfony" style="color: #000000;"></i>
                             </div>
                             <div class="titre-box">
-                                <a href="Devenez un pro Symfony 6">Devenez un pro Symfony 6</a>
+                                <a href="../Formations/formation5.html">Devenez un pro Symfony 6</a>
                             </div>
                             <div class="texte-box">
                                 <p><i class="fa-solid fa-list"></i> 129 Vidéos <span class="dispo-prema">Disponible en accès
@@ -155,7 +158,9 @@
                                     Amazon, Indeed, etc.</p>
                             </div>
                             <div class="valide">
-                                <button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button>
+                                <a class="d-flex justify-content-center align-items-center" href="../Formations/formation-1.html"
+                                    style="width: 400px; text-decoration: none;"><button><i class="fa-solid fa-play" style="color: #ffffff;"></i>
+                                        Demarrer la formation</button></a>
                             </div>
                         </div>
                     </div>
@@ -166,7 +171,7 @@
                                 <i class="fa-brands fa-python" style="color: #eed211;"></i>
                             </div>
                             <div class="titre-box">
-                                <a href="Devenez un pro Symfony 6">MasterClass Python</a>
+                                <a href="../Formations/formation6.html">MasterClass Python</a>
                             </div>
                             <div class="texte-box">
                                 <p><i class="fa-solid fa-list"></i> 129 Vidéos <span class="dispo-prema">Disponible en accès
@@ -179,7 +184,9 @@
                                 </p>
                             </div>
                             <div class="valide">
-                                <button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button>
+                                <a class="d-flex justify-content-center align-items-center" href="../Formations/formation-1.html"
+                                    style="width: 400px; text-decoration: none;"><button><i class="fa-solid fa-play" style="color: #ffffff;"></i>
+                                        Demarrer la formation</button></a>
                             </div>
                         </div>
                     </div>
@@ -201,7 +208,9 @@
                                     développement. Donnez-moi une semaine et je vous le prouverai :). Ready?</p>
                             </div>
                             <div class="valide">
-                                <button><i class="fa-solid fa-play" style="color: #ffffff;"></i> Demarrer la formation</button>
+                                <a class="d-flex justify-content-center align-items-center" href="../Formations/formation-1.html"
+                                    style="width: 400px; text-decoration: none;"><button><i class="fa-solid fa-play" style="color: #ffffff;"></i>
+                                        Demarrer la formation</button></a>
                             </div>
                         </div>
                     </div>
