--- a/panier/panier.html
+++ b/panier/panier.html
@@ -13,8 +13,8 @@
 <body>
     <div class="Menu">
         <ul class="">
-            <li><a href="../Menu/Menu.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
-            <li><a aria-current="page" href="#">Formations</a></li>
+            <li><a href="../page_accueil/index.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
+            <li><a aria-current="page" href="../page_accueil/index.html">Formations</a></li>
             <li><a href="../Menu/Menu.html">Ateliers</a></li>
             <li><a href="">Poadcast</a></li>
             <li><a href="../livres/livres.html">Livres</a></li>
