--- a/Support/Support.html
+++ b/Support/Support.html
@@ -17,8 +17,8 @@
 <body>
     <div class="Menu">
         <ul class="">
-            <li><a href="../Menu/Menu.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
-            <li><a aria-current="page" href="#">Formations</a></li>
+            <li><a href="../page_accueil/index.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
+            <li><a aria-current="page" href="#formation">Formations</a></li>
             <li><a href="../Atelier/code.html">Ateliers</a></li>
             <li><a href="">Poadcast</a></li>
             <li><a href="../livres/livres.html">Livres</a></li>
