--- a/Temoignage/Temoignage.html
+++ b/Temoignage/Temoignage.html
@@ -16,8 +16,8 @@
         <!------ Debut section container --------->
         <div class="Menu">
             <ul class="">
-                <li><a href="../Menu/Menu.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
-                <li><a aria-current="page" href="../Menu/Menu.html">Formations</a></li>
+                <li><a href="../page_accueil/index.html"><img src="img.PNG" width="16px" alt="">Parlons Code</a></li>
+                <li><a aria-current="page" href="../page_accueil/index.html">Formations</a></li>
                 <li><a href="../Atelier/code.html">Ateliers</a></li>
                 <li><a href="../Prodcasts/prodcasts.html">Poadcast</a></li>
                 <li><a href="../livres/livres.html">Livres</a></li>
